# griffin_reimpl

./: README.md  pyproject.toml
griffin/: griffin.py
